fixed ui errors when editing phones